--- a/.env
+++ b/.env
@@ -16,7 +16,12 @@ VITE_ADMIN_POP_API = 'admin/pop'
 
 VITE_USER_VERIFICATION_API = 'user/user-verification'
 
-VITE_BASE_API = 'https://code-mars-yqwf.onrender.com/'
+# VITE_BASE_API = 'https://code-mars-yqwf.onrender.com/'
+
+VITE_BASE_API = 'http://localhost:7000/'
+
+
+
 
 VITE_FETCH_ALL_QUESTIONS_API = 'questions/all-questions'
 
@@ -37,4 +42,8 @@ VITE_DELETE_DISCUSSION_API = 'questions/delete-discussion'
 VITE_GET_USER_INFO_API=  'user/info'
 
 VITE_GET_ALL_SUBMISSIONS_API = 'questions/all-submissions'
+
+VITE_GET_USER_PROFILE_API = 'user/profile-info'
+
+VITE_EDIT_PROFILE_API = 'user/edit-profile'
 
